--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,5 +18,7 @@ jobs:
         run: go get -v ./...
       - name: Build
         run: go build -v ./...
-      - name: Test
-        run: go test -v ./...
+      - name: Unit Tests
+        run: go test -v -short ./...
+      - name: Integration Tests
+        run: go test -v -run Integration ./...
